Adding Harvard's ranks-opp_strength

--- a/mittab/apps/tab/templates/pairing_control.html
+++ b/mittab/apps/tab/templates/pairing_control.html
@@ -48,7 +48,7 @@
             <table class="table table-condensed table-second-striped table-bordered ">
                 <tr><th>Team</th>
                     <th>Role</th>
-                    <th>Ws/Ss/Gs/Os</th>
+                    <th>Ws/ROs/Ss/Gs/Os</th>
                     <th>Judges</th>
                     <th title="Maximum gap in ranks between panel judge and panelists" >Panel Gap</th>
                     <th>Room</th>
