--- a/mittab/apps/tab/templates/rank_teams_component.html
+++ b/mittab/apps/tab/templates/rank_teams_component.html
@@ -1,18 +1,19 @@
 <div class="left50">
     <table class="table table-striped table-condensed table-bordered">
         <tr>
-            <th colspan=5> Varsity Team Ranking </th>
+            <th colspan=6> Varsity Team Ranking </th>
         </tr>
         <tr>
-                <th>#</th><th>Team Name</th><th>Wins</th><th>Speaks</th><th>Ranks</th>
-        </tr>    
-        {% for team,wins,speaks,ranks in varsity %}
+            <th>#</th><th>Team Name</th><th>Wins</th><th>Ranks - Opp Wins</th><th>Ranks</th><th>Speaks</th>
+        </tr>
+        {% for team,wins,rmo,ranks,speaks in varsity %}
         <tr>
             <td> {{forloop.counter}} </td>
             <td> <a href="/team/{{team.id}}">{{team.name}}</a></td>
             <td> {{wins}}</td>
-            <td> {{speaks|floatformat:2}}</td>
+            <td> {{rmo|floatformat:2}}</td>
             <td> {{ranks|floatformat:2}}</td>
+            <td> {{speaks|floatformat:2}}</td>
         </tr>
         {% endfor %}
     </table>
@@ -20,18 +21,19 @@
 <div class="right50">
     <table class="table table-striped table-condensed table-bordered">
         <tr>
-            <th colspan=5>Novice Team Ranking</th> 
+            <th colspan=6>Novice Team Ranking</th> 
         </tr>
         <tr>
-                <th>#</th><th>Team Name</th><th>Wins</th><th>Speaks</th><th>Ranks</th>
-        </tr>    
-        {% for team,wins,speaks,ranks in novice %}
+            <th>#</th><th>Team Name</th><th>Wins</th><th>Ranks - Opp Wins</th><th>Ranks</th><th>Speaks</th>
+        </tr>
+        {% for team,wins,rmo,ranks,speaks in novice %}
         <tr>
             <td> {{forloop.counter}} </td>
             <td> <a href="/team/{{team.id}}">{{team.name}}</a></td>
             <td> {{wins}}</td>
-            <td> {{speaks|floatformat:2}}</td>
+            <td> {{rmo|floatformat:2}}</td>
             <td> {{ranks|floatformat:2}}</td>
+            <td> {{speaks|floatformat:2}}</td>
         </tr>
         {% endfor %}
     </table>
