Get the form renderring better

--- a/mittab/apps/tab/templates/judge_checkin.html
+++ b/mittab/apps/tab/templates/judge_checkin.html
@@ -7,8 +7,13 @@
 
 <div id="batch_checkin">
   {% for form in forms %}
-  {{ form.judge.name }}
-  {{ form }}
+  <div class="checkin_row row">
+    <p>{{ form.judge.name }}</p>
+
+    {{ form.as_ul }}
+
+    {{ form.submit }}
+  </div>
   {% endfor %}
 </div>
 
